# Comp

./: CMakeLists.txt  Makefile  README.md  diy  diy.brg  diy.l  diy.y  lex.yy.c  mean.diy  old.y  oquefalta.txt  rand.diy  recurs.diy  string.diy  test.txt  y.output  y.tab.c  y.tab.h  yyselect.c
exs/: Makefile  factorial.diy  hello.diy  iter.diy  mean.diy  rand.diy  recurs.diy  string.diy
